# cjholiday

./: MANIFEST.in  README.md  cjholiday.c  cjholiday.h  pyproject.toml  setup.cfg  setup.py  test_cjholiday.py
.github/workflows/: build_windowns_wheels.yml
cjholiday/: __init__.py  __init__.pyi  __main__.py  cjholiday.pyi
clinic/: cjholiday.c.h
src/: cjholiday.c  cjholiday.h
src/cjholiday/: __main__.py
src/clinic/: cjholiday.c.h
