[project]
name = "cjholiday"
version = "1.4.3"
authors = [
  { name="fgshun", email="fgshun@gmail.com" },
]
description = "日本の祝日判定"
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Private :: Do Not Upload",
]

[project.urls]
"Homepage" = "https://github.com/fgshun/cjholiday"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cjholiday = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
