[metadata]
name = cjholiday
version = 1.4.0
author = fgshun
author_email = fgshun@gmail.com
url = https://github.com/fgshun

[options]
packages = cjholiday
python_requires = ==3.7
setup_requires = pytest-runner
tests_requires = pytest

[options.package_data]
cjholiday = py.typed, *.pyi

[aliases]
test=pytest
